package com.acme.kms.entity;

import java.math.BigDecimal;
import java.util.List;
import java.util.Objects;
import java.util.UUID;

/// Diese Klasse repräsentiert eine Kasse im System.
/// ![Klassendiagramm](/docs/asciidoc/Kasse.svg)
public class Kasse {
    private UUID id;
    private final String bezeichnung;
    private Kassierer kassierer;
    private BigDecimal bargeldbestand;
    private List<KassenBon> kassenBons;

    public Kasse(final UUID id, final String bezeichnung, final Kassierer kassierer, final BigDecimal bargeldbestand, final List<KassenBon> kassenBons) {
        this.id = id;
        this.bezeichnung = bezeichnung;
        this.kassierer = kassierer;
        this.bargeldbestand = bargeldbestand;
        this.kassenBons = kassenBons;
    }

    @Override
    public boolean equals(final Object other) {
        return other instanceof Kasse kasse && Objects.equals(id, kasse.id);
    }

    @Override
    public int hashCode() {
        return Objects.hash(id);
    }

    public UUID getId() {
        return id;
    }

    public void setId(final UUID id) {
        this.id = id;
    }

    public String getBezeichnung() {
        return bezeichnung;
    }

    public Kassierer getKassierer() {
        return kassierer;
    }

    public List<KassenBon> getKassenBons() {
        return kassenBons;
    }

    public BigDecimal getBargeldbestand() {
        return bargeldbestand;
    }

    public void setBargeldbestand(final BigDecimal bargeldbestand) {
        this.bargeldbestand = bargeldbestand;
    }

    public void setKassierer(final Kassierer kassierer) {
        this.kassierer = kassierer;
    }

    public void setKassenBons(final List<KassenBon> kassenBons) {
        this.kassenBons = kassenBons;
    }
}
